--- a/dev/sass/style.sass
+++ b/dev/sass/style.sass
@@ -1,313 +1,20 @@
+//Variables
 $primay-color : #19B5FE
 $slabo: 'Slabo 27px'
 
-body 
-	background: #f8f8f8
-	font-family: 'lato'
+//Media Queries
+$mq-xs: "(max-width: 767px)"
+$mq-sm: "(min-width: 768px) and (max-width: 991px)"
+$mq-md: "(min-width: 992px) and (max-width: 1199px)"
+$mq-lg: "(min-width: 1200px)"
 
-p
-	margin: 0 0 20px
+//Imports
+@import 'components/_gui'
 
-.btn
-	padding: 10px 20px
-	background: $primay-color
-	color: #fff
-	border-radius: 5px
-	text-decoration: none
-	outline: none
-	white-space: nowrap
-	display: inline-block
-	&:hover
-		color: #fff
-		opacity: .9
-		text-decoration: none
-	i
-		margin-right: 10px
-		font-size: 17px
+@import 'pages/_blog'
+@import 'pages/_media'
 
-
-nav
-	width: 100%
-	height: 80px
-	.container
-		height: 100%
-		ul.menu-items
-			float: right
-			li
-				float: left
-				list-style: none
-				position: relative
-				text-align: center
-			a.item
-				color: #333
-				padding: 19px 15px
-				text-decoration: none
-				line-height: 80px
-				&:hover, &.active:hover
-					color: $primay-color
-				&.active
-					color: $primay-color
-					border-bottom: 3px solid $primay-color
-				i
-					font-size: 22px
-		a.logo
-			font-family: $slabo
-			font-size: 32px
-			color: #333
-			text-decoration: none
-			line-height: 80px
-			float: left
-			position: relative
-			width: 200px
-			span
-				font-family: "lato"
-				position: absolute
-				bottom: -23px
-				font-size: 12px
-				left: 55px
-				font-weight: 500
-				color: #a8a8a8
-
-
-/*** SEARCH ***/
-.search
-	position: fixed
-	background: #f8f8f8
-	top: 0
-	left: 0
-	bottom: 0
-	right: 0
-	z-index: 9
-	opacity: 0
-	transform: scale(1.1)
-	visibility: hidden
-	transition: all .3s ease
-	&.active
-		opacity: 0.95
-		transform: scale(1)
-		visibility: visible
-
-	.search__form
-		width: 80%
-		max-width: 500px
-		height: 180px
-		position: absolute
-		top: 50%
-		left: 50%
-		transform: translate(-50%, -50%)
-
-	h2
-		text-align: center
-		margin-bottom: 50px
-
-	.material-icons
-		float: left
-		width: 20%
-		text-align: center
-		font-size: 40px
-
-	.search__input
-		background: none
-		font-size: 30px
-		border: none
-		border-bottom: 2px solid #000
-		outline: none
-		width: 80%
-		float: left
-		font-weight: 300
-
-/*** ARTICLES ***/
-.articles
-	margin-top: 60px
-
-.article
-	margin-bottom: 100px
-
-.article__image
-	width: 100%
-	height: 300px
-	overflow: hidden
-	position: relative
-	display: block
-	img
-		width: 100%
-		position: absolute
-		top: 50%
-		transform: translateY(-50%)
-		transition: all .3s ease
-		&:hover
-			opacity: .9
-
-.article__content
-	width: 80%
-	margin: 40px auto
-	h1
-		font-family: $slabo
-		font-size: 32px
-		a 
-			color: #333
-			text-decoration: none
-			&:hover
-				color: $primay-color
-	p
-		font-size: 18px
-		line-height: 32px
-		font-weight: 300
-		color: #515251
-
-.article__meta
-	list-style: none
-	padding: 0
-	li
-		float: left
-		color: #333
-		opacity: .4
-		margin-right: 15px
-
-		i 
-			font-size: 14px
-			margin-right: 3px
-
-.article__readmore
-	color: $primay-color
-	text-decoration: none
-	font-family: $slabo
-	font-size: 16px
-	&:hover
-		color: #333
-
-.article__container--last
-	margin-top: 100px
-
-aside.sidebar
-	margin-top: 60px
-
-.sidebar__title
-	font-size: 22px
-	margin-top: 0
-	margin-bottom: 20px
-
-.sidebar__title--archief
-	@extend .sidebar__title
-	margin-bottom: 10px
-
-.sidebar__image
-	width: 100px
-	height: 70px
-	background-size: cover
-	float: left
-	margin-right: 10px
-
-.sidebar__section
-	margin-bottom: 50px
-	.btn
-		margin-right: 5px
-		margin-bottom: 5px
-
-	p 
-		margin-bottom: 10px
-
-.sidebar__article
-	margin-bottom: 20px
-	.sidebar__title
-		font-size: 18px
-		margin-bottom: 0
-		font-family: $slabo
-	.sidebar__date
-		color: #333
-		opacity: .4
-		font-size: 12px
-
-/*** Article Detail ***/
-.single-article
-	margin-top: 60px
-	.article__image
-		height: 500px
-		img:hover
-			opacity: 1
-
-.article__tags
-	@extend .article__content
-	.tag
-		color: #A8A8A8
-		padding: 5px 16px
-		border: 1px solid #D6D6D6
-		border-radius: 16px
-		font-weight: 300
-		margin-right: 5px
-		&:hover
-			text-decoration: none
-			border: 1px solid $primay-color
-			color: $primay-color
-
-.article__share
-	@extend .article__content
-	padding: 70px 0
-	border-top: 1px solid #eee
-	border-bottom: 1px solid #eee
-	a
-		margin-right: 5px
-
-.btn--facebook
-	@extend .btn
-	background: #4c69ba
-	width: 120px
-.btn--twitter
-	@extend .btn
-	background: #1b95e0
-.btn--google-plus
-	@extend .btn
-	background: #d73d32
-.btn--linkedin
-	@extend .btn
-	background: #008cc9
-	width: 120px
-
-/** Footer **/
-footer
-	height: 500px 
-	background: #202121
-	color: #f8f8f8
-
-.footer__social-media
-	background: #fff
-	height: 100px
-	width: 100%
-	text-align: center
-	a
-		color: #333
-		line-height: 80px
-		font-size: 22px
-		padding: 10px
-		&:hover
-			text-decoration: none 
-			color: $primay-color
-		&.logo
-			font-family: $slabo
-			font-weight: 900
-			font-size: 30px
-			padding: 20px 30px
-			color: $primay-color
-			&:hover
-				font-size: 32px
-
-.footer__title
-	color: #f8f8f8
-	font-family: $slabo
-	font-size: 22px
-
-.footer__section
-	margin-top: 60px
-
-
-.media__header
-	height: 60vh
-	h1
-		font-size: 45px
-		font-family: $slabo
-		text-align: center
-		line-height: 60vh
-
-.media__table
-	width: 100%
-	margin-bottom: 100px
+@import 'components/_header'
+@import 'components/_footer'
+@import 'components/_search'
+@import 'components/_sidebar'
