--- a/dev/html/components/header.html
+++ b/dev/html/components/header.html
@@ -1,21 +1,24 @@
 <header>
-	<nav>
-		<div class="container">
-			<a class="item logo" href="/">MijnsInziens</a>
-			<ul class="menu-items">
-				<li><a class="item active" href="/">Home</a></li>
-				<li><a class="item" href="#">Over mij</a></li>
-				<li><a class="item" href="#">Portfolio</a></li>
-				<li><a class="item" href="/in-de-media.html">In de media</a></li>
-				<li><a class="item" href="#">Contact</a></li>
-				<li><a class="item search-trigger" href="#"><i class="material-icons">search</i></a></li>
-			</ul>
-		</div>
+	<nav class="container">
+		<a class="item logo" href="/">MijnsInziens</a>
+		<ul class="mobile-menuitems">
+			<li><a class="item search-trigger" href="#"><i class="material-icons">search</i></a></li>
+			<li><a class="item hamburger" href="#"><i class="material-icons">menu</i></a></li>
+		</ul>
+		<ul class="menu-items">
+			<li><a class="item active" href="/">Home</a></li>
+			<li><a class="item" href="#">Over mij</a></li>
+			<li><a class="item" href="#">Portfolio</a></li>
+			<li><a class="item" href="/in-de-media.html">In de media</a></li>
+			<li><a class="item" href="#">Contact</a></li>
+			<li><a class="item search-trigger" href="#"><i class="material-icons">search</i></a></li>
+		</ul>
 	</nav>
 </header>
 <section class="search">
+	<i class="material-icons search__closebutton">clear</i>
 	<div class="search__form">
 		<h2>zoeken</h2>
-		<i class="material-icons">search</i><input class="search__input" type="text" />
+		<i class="material-icons search__icon">search</i><input class="search__input" type="text" />
 	</div>
 </section>
