--- a/dev/sass/components/_search.sass
+++ b/dev/sass/components/_search.sass
@@ -15,6 +15,13 @@
 		transform: scale(1)
 		visibility: visible
 
+	.search__closebutton
+		float: right
+		text-align: right
+		font-size: 40px
+		cursor: pointer
+		margin: 10px
+
 	.search__form
 		width: 80%
 		max-width: 500px
@@ -28,7 +35,7 @@
 		text-align: center
 		margin-bottom: 50px
 
-	.material-icons
+	.search__icon
 		float: left
 		width: 20%
 		text-align: center
