--- a/dev/sass/pages/_media.sass
+++ b/dev/sass/pages/_media.sass
@@ -1,11 +1,51 @@
 .media__header
-	height: 60vh
+	height: 50vh
 	h1
 		font-size: 45px
 		font-family: $slabo
 		text-align: center
-		line-height: 60vh
+		line-height: 50vh
+		margin: 0
+
+.media_statics
+	margin-bottom: 100px
+	img
+		width: 100%
+
+	ul
+		list-style: none
+		margin-top: 100px
+		li
+			font-size: 40px
+			font-weight: 300
+			position: relative
+			width: auto
+			span
+				color: $primay-color
+				font-size: 30px
+				position: absolute
+				top: -10px
+				margin-left: 10px
+	p
+		padding-left: 40px
+		font-size: 18px
+		line-height: 30px
+		font-weight: 300
+
 
 .media__table
 	width: 100%
 	margin-bottom: 100px
+	
+	tr
+		border-bottom: 1px solid #e4e3e2
+		th
+			font-size: 22px
+			font-family: $slabo
+			line-height: 60px
+		td
+			font-size: 16px
+			line-height: 45px
+			font-weight: 300
+			&.desc
+				width: 65%
