Mobiel menu gefixt v2

--- a/dev/sass/components/_gui.sass
+++ b/dev/sass/components/_gui.sass
@@ -36,3 +36,11 @@ p
 	@extend .btn
 	background: #008cc9
 	width: 120px
+
+.closebutton
+	float: right
+	text-align: right
+	font-size: 40px
+	display: block
+	cursor: pointer
+	padding: 10px
