--- a/dev/html/components/header.html
+++ b/dev/html/components/header.html
@@ -1,22 +1,25 @@
 <header>
-	<nav class="container">
+	<div class="container navigation">
 		<a class="item logo" href="/">MijnsInziens</a>
 		<ul class="mobile-menuitems">
 			<li><a class="item search-trigger" href="#"><i class="material-icons">search</i></a></li>
 			<li><a class="item hamburger" href="#"><i class="material-icons">menu</i></a></li>
 		</ul>
-		<ul class="menu-items">
-			<li><a class="item active" href="/">Home</a></li>
-			<li><a class="item" href="#">Over mij</a></li>
-			<li><a class="item" href="#">Portfolio</a></li>
-			<li><a class="item" href="/in-de-media.html">In de media</a></li>
-			<li><a class="item" href="#">Contact</a></li>
-			<li><a class="item search-trigger" href="#"><i class="material-icons">search</i></a></li>
-		</ul>
-	</nav>
+		<nav>
+			<a class="item menu__closebutton closebutton" href="#"><i class="material-icons">clear</i></a>	
+			<ul class="menu-items">
+				<li><a class="item active" href="/">Home</a></li>
+				<li><a class="item" href="#">Over mij</a></li>
+				<li><a class="item" href="#">Portfolio</a></li>
+				<li><a class="item" href="/in-de-media.html">In de media</a></li>
+				<li><a class="item" href="#">Contact</a></li>
+				<li><a class="item search-trigger" href="#"><i class="material-icons">search</i></a></li>
+			</ul>
+		</nav>
+	</div>
 </header>
 <section class="search">
-	<i class="material-icons search__closebutton">clear</i>
+	<i class="material-icons search__closebutton closebutton">clear</i>
 	<div class="search__form">
 		<h2>zoeken</h2>
 		<i class="material-icons search__icon">search</i><input class="search__input" type="text" />
