fixed small styling

--- a/dev/sass/components/_gui.sass
+++ b/dev/sass/components/_gui.sass
@@ -2,6 +2,12 @@ body
 	background: #f8f8f8
 	font-family: 'lato'
 
+::selection 
+	background: rgba(25,181,254,.4)
+
+::-moz-selection 
+	background: rgba(25,181,254,.4)
+
 p
 	margin: 0 0 20px
 
