Overflow hidden gefixt

--- a/dev/html/components/header.html
+++ b/dev/html/components/header.html
@@ -5,7 +5,7 @@
 			<li><a class="item search-trigger" href="#"><i class="material-icons">search</i></a></li>
 			<li><a class="item hamburger" href="#"><i class="material-icons">menu</i></a></li>
 		</ul>
-		<nav>
+		<nav class="clearfix">
 			<a class="item menu__closebutton closebutton" href="#"><i class="material-icons">clear</i></a>	
 			<ul class="menu-items">
 				<li><a class="item active" href="/">Home</a></li>
