--- a/dev/sass/components/_header.sass
+++ b/dev/sass/components/_header.sass
@@ -1,6 +1,5 @@
 .navigation
 	height: 80px
-	overflow: hidden
 	@media #{$mq-xs}
 		position: fixed
 		left: 0
@@ -53,6 +52,7 @@
 
 	ul.menu-items
 		float: right
+		margin-bottom: 0
 		@media #{$mq-xs}
 			position: fixed
 			left: 50%
