Icon colors veranderd mobiel menu

--- a/dev/sass/components/_header.sass
+++ b/dev/sass/components/_header.sass
@@ -25,6 +25,7 @@
 		.material-icons
 			font-size: 32px
 			vertical-align: -12px
+			color: #333
 
 	nav
 		@media #{$mq-xs}
@@ -43,6 +44,8 @@
 
 		.closebutton
 			display: none
+			color: #333
+			padding: 23px 16px
 			@media #{$mq-xs}
 				display: block
 				font-size: inherit
