Search gefixt op Mobiel

--- a/dev/sass/components/_header.sass
+++ b/dev/sass/components/_header.sass
@@ -45,7 +45,6 @@
 		.closebutton
 			display: none
 			color: #333
-			padding: 23px 16px
 			@media #{$mq-xs}
 				display: block
 				font-size: inherit
@@ -113,7 +112,7 @@
 			font-weight: 500
 			color: #a8a8a8
 
-.mobilemenu-open .navigation nav
+.mobilemenu-open nav
 	opacity: 0.95
 	transform: scale(1)
 	visibility: visible
