Over pagina gemaakt en footer aangepast

--- a/dev/sass/components/_footer.sass
+++ b/dev/sass/components/_footer.sass
@@ -30,3 +30,18 @@ footer
 
 .footer__section
 	margin-top: 60px
+
+	ul 
+		padding-left: 10px
+		margin: 0
+
+		li 
+			list-style: none
+			margin: 5px 0
+
+			a
+				color: #f8f8f8
+
+				&:hover
+					color: $primay-color
+					text-decoration: none
