--- a/dev/html/components/header.html
+++ b/dev/html/components/header.html
@@ -9,7 +9,7 @@
 			<a class="item menu__closebutton closebutton" href="#"><i class="material-icons">clear</i></a>	
 			<ul class="menu-items">
 				<li><a class="item active" href="/">Home</a></li>
-				<li><a class="item" href="#">Over mij</a></li>
+				<li><a class="item" href="/over-mij.html">Over mij</a></li>
 				<li><a class="item" href="#">Portfolio</a></li>
 				<li><a class="item" href="/in-de-media.html">In de media</a></li>
 				<li><a class="item" href="#">Contact</a></li>
