--- a/dev/sass/style.sass
+++ b/dev/sass/style.sass
@@ -13,6 +13,7 @@ $mq-lg: "(min-width: 1200px)"
 
 @import 'pages/_blog'
 @import 'pages/_media'
+@import 'pages/_over'
 
 @import 'components/_header'
 @import 'components/_footer'
