--- a/dev/sass/components/_header.sass
+++ b/dev/sass/components/_header.sass
@@ -89,7 +89,7 @@
 					border-bottom: 3px solid $primay-color
 				i
 					font-size: 22px
-					line-height: 80px
+					vertical-align: -6px
 
 				&.search-trigger 
 					@media #{$mq-xs}
