Contact + Portfolio pagina aangemaakt en wat sass op Mobiel

--- a/dev/html/components/header.html
+++ b/dev/html/components/header.html
@@ -10,9 +10,9 @@
 			<ul class="menu-items">
 				<li><a class="item active" href="/">Home</a></li>
 				<li><a class="item" href="/over-mij.html">Over mij</a></li>
-				<li><a class="item" href="#">Portfolio</a></li>
+				<li><a class="item" href="/portfolio.html">Portfolio</a></li>
 				<li><a class="item" href="/in-de-media.html">In de media</a></li>
-				<li><a class="item" href="#">Contact</a></li>
+				<li><a class="item" href="/contact.html">Contact</a></li>
 				<li><a class="item search-trigger" href="#"><i class="material-icons">search</i></a></li>
 			</ul>
 		</nav>
