--- a/dev/sass/pages/_blog.sass
+++ b/dev/sass/pages/_blog.sass
@@ -22,6 +22,8 @@
 .article__content
 	width: 80%
 	margin: 40px auto
+	@media #{$mq-xs}
+		width: 100%
 	h1
 		font-family: $slabo
 		font-size: 32px
@@ -90,3 +92,4 @@
 	border-bottom: 1px solid #eee
 	a
 		margin-right: 5px
+		margin-bottom: 5px
