--- a/dev/sass/style.sass
+++ b/dev/sass/style.sass
@@ -14,6 +14,7 @@ $mq-lg: "(min-width: 1200px)"
 @import 'pages/_blog'
 @import 'pages/_media'
 @import 'pages/_over'
+@import 'pages/_contact'
 
 @import 'components/_header'
 @import 'components/_footer'
