--- a/dev/sass/pages/_contact.sass
+++ b/dev/sass/pages/_contact.sass
@@ -1,5 +1,5 @@
 .contact__page
-	margin-top: 40vh
+	margin-top: 25vh
 
 .contact__container
 	margin-bottom: 100px
@@ -7,10 +7,11 @@
 	h1
 		font-size: 20px
 		font-weight: 300
+		font-family: $slabo
 
 	.contact
 
-		ul
+		.contact__information
 			margin: 0
 			padding: 0
 
@@ -18,10 +19,21 @@
 				font-size: 30px
 				list-style: none
 				width: 100%
+				font-weight: 300
 
 				a
 					color: #333
 					text-decoration: none
+
+		.contact__metadata
+			margin: 100px 0 0 0
+			padding: 0
+
+			li
+				font-size: 14px
+				list-style-type: none
+				font-weight: 300
+				font-style: italic
 
 	.social
 
