portfolio pagina aan t maken

--- a/dev/sass/style.sass
+++ b/dev/sass/style.sass
@@ -15,6 +15,7 @@ $mq-lg: "(min-width: 1200px)"
 @import 'pages/_media'
 @import 'pages/_over'
 @import 'pages/_contact'
+@import 'pages/_portfolio'
 
 @import 'components/_header'
 @import 'components/_footer'
