--- a/dev/sass/components/_header.sass
+++ b/dev/sass/components/_header.sass
@@ -82,6 +82,7 @@
 				line-height: 120px
 				border-bottom: 1px solid transparent
 				transition: all .4s ease
+				letter-spacing: 1px
 				@media #{$mq-xs}
 					padding: 0
 					line-height: 0
