--- a/dev/sass/pages/_media.sass
+++ b/dev/sass/pages/_media.sass
@@ -1,13 +1,4 @@
-.media__header
-	height: 50vh
-	h1
-		font-size: 45px
-		font-family: $slabo
-		text-align: center
-		line-height: 50vh
-		margin: 0
-
-.media_statics
+.media__statics
 	margin-bottom: 100px
 	img
 		width: 100%
@@ -32,6 +23,10 @@
 		line-height: 30px
 		font-weight: 300
 
+.media__items
+	h2
+		font-size: 42px
+		font-weight: 300
 
 .media__table
 	width: 100%
