--- a/dev/sass/components/_gui.sass
+++ b/dev/sass/components/_gui.sass
@@ -49,3 +49,12 @@ p
 	display: block
 	cursor: pointer
 	padding: 23px 16px
+
+.page__header
+	height: 50vh
+	h1
+		font-size: 45px
+		font-family: $slabo
+		text-align: center
+		line-height: 50vh
+		margin: 0
