--- a/dev/sass/pages/_portfolio.sass
+++ b/dev/sass/pages/_portfolio.sass
@@ -35,3 +35,16 @@
 				margin-bottom: 15px
 				font-size: 18px
 				font-weight: 300
+
+.portfolio__divider
+	height: 500px
+	margin-bottom: 100px
+
+	.portfolio__divider__picture
+		background-image: url('/assets/images/iceland5.jpg')
+		background-size: cover
+		background-position: 50% 50%
+		background-repeat: no-repeat
+		height: 100%
+		width: 100%
+
