--- a/dev/sass/pages/_portfolio.sass
+++ b/dev/sass/pages/_portfolio.sass
@@ -40,11 +40,12 @@
 	height: 500px
 	margin-bottom: 100px
 
-	.portfolio__divider__picture
+	.portfolio__picture
 		background-image: url('/assets/images/iceland5.jpg')
 		background-size: cover
 		background-position: 50% 50%
 		background-repeat: no-repeat
 		height: 100%
 		width: 100%
+		opacity: 0.7
 
