Tablet menu gefixt

--- a/dev/sass/components/_header.sass
+++ b/dev/sass/components/_header.sass
@@ -84,6 +84,8 @@
 				border-bottom: 1px solid transparent
 				transition: all .4s ease
 				letter-spacing: 1px
+				@media #{$mq-sm}
+					margin: 0 10px
 				@media #{$mq-xs}
 					padding: 0
 					line-height: 0
