--- a/dev/sass/components/_footer.sass
+++ b/dev/sass/components/_footer.sass
@@ -33,13 +33,13 @@ footer
 .footer__title
 	color: #f8f8f8
 	font-family: $slabo
-	font-size: 22px
+	font-size: 18px
 
 .footer__section
 	margin-top: 60px
 
 	ul 
-		padding-left: 10px
+		padding-left: 0px
 		margin: 0
 
 		li 
@@ -48,6 +48,9 @@ footer
 
 			a
 				color: #f8f8f8
+				line-height: 24px
+				font-size: 16px
+				font-weight: 300
 
 				&:hover
 					color: $primay-color
