--- a/dev/sass/components/_footer.sass
+++ b/dev/sass/components/_footer.sass
@@ -1,5 +1,5 @@
 footer
-	height: 500px 
+	height: 400px 
 	background: #202121
 	color: #f8f8f8
 	padding: 10px 0
@@ -26,7 +26,8 @@ footer
 			font-weight: 900
 			font-size: 30px
 			padding: 20px 30px
-			color: $primay-color
+			&:hover
+				color: #333
 			@media #{$mq-xs}
 				padding: 20px
 
@@ -37,6 +38,10 @@ footer
 
 .footer__section
 	margin-top: 60px
+	
+	p
+		font-size: 16px
+		font-weight: 300
 
 	ul 
 		padding-left: 0px
