--- a/dev/sass/pages/_media.sass
+++ b/dev/sass/pages/_media.sass
@@ -2,12 +2,13 @@
 	margin-bottom: 100px
 	img
 		width: 100%
+		opacity: .7
 
 	ul
 		list-style: none
 		margin-top: 100px
 		li
-			font-size: 40px
+			font-size: 42px
 			font-weight: 300
 			position: relative
 			width: auto
